IMPALA-5121: Fix AVG() on timestamp col with use_local_tz_for_unix_timestamp_conversions

AVG used to contain a back and forth timezone conversion if
use_local_tz_for_unix_timestamp_conversions is true. This could
affect the results if there were values from different DST rules.

Note that AVG on timestamps has other issues besides this, see
IMPALA-7472 for details.

Testing:
- added a regression test

Change-Id: I999099de8e07269b96b75d473f5753be4479cecd
Reviewed-on: http://gerrit.cloudera.org:8080/17412
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>